Fixed overflow in events

--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ div {
   box-sizing:border-box;
   -moz-box-sizing:border-box;
   -webkit-box-sizing:border-box;
+  /*overflow: hidden;*/
 }
 
 #container {
@@ -60,6 +61,8 @@ tr:nth-child(even) .time > span {
 .event:before{
   display: block;
   border: 4px solid #4d6fa7;
+  border-top-width: 0;
+  border-bottom-width: 0;
   border-right-width: 0;
   content: '';
   /*height: 100%;*/
@@ -69,7 +72,12 @@ tr:nth-child(even) .time > span {
   position: absolute;
 }
 
-.event > .span {
+.scroll {
+  height: 100%;
+  overflow: auto;
+}
+
+.scroll > .span {
   margin-left: 5px;
 }
 
